--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
+    implementation "io.springfox:springfox-boot-starter:3.0.0"
     implementation 'org.projectlombok:lombok:1.18.16'
     implementation 'org.projectlombok:lombok:1.18.16'
     runtimeOnly 'com.h2database:h2'
@@ -23,6 +23,8 @@ dependencies {
 
     annotationProcessor('org.projectlombok:lombok')
     testAnnotationProcessor('org.projectlombok:lombok')
+
+
 }
 
 test {
